<resources>
    <string name="app_name">Mentalhealth</string>
    <string name="this_is_ur_moment">This is your moment to have a fresh start. Make the most of all that the new year has to offer with our free courses</string>
    <string name="more_courses_will_be">More courses will be getting added with each new update of the app!</string>
<!--    <string name="para_res_1">-->
<!--        <b>The 3 C's of resilience</b><br></br><br></br>-->
<!--        In psychology, resilience is defined as the ability to adapt well in the face of adversity,-->
<!--        trauma, tragedy, threats and significant sources of stress. According to the psycologist-->
<!--        Susan Kobasa, there are 3 elements that are necessary to cultivate resilience, namely-challenge, commitment and control.-->
<!--        <br></br><br></br><b>Element 1: Challenge</b><br></br><br></br>-->
<!--        According to the first element, resilience involves-->
<!--not getting paralysed in the face of adversity. It-->
<!--means shifting your perspective to look at setbacks-->
<!--as a challenge that can be overcome. Being resilient-->
<!--means approaching challenges with an open mind,-->
<!--looking at failures as lessons, and considering-->
<!--obstacles as opportunities for personal growth.-->
<!--    <br></br><br></br><br></br><b>Element 2: Commitment</b><br></br><br></br>-->
<!--    The second element emphasises the fact that-->
<!--resilience involves having a high sense of-->
<!--commitment. It means having deep and meaningful-->
<!--relationships with others which will motivate you-->
<!--to move forward. Essentially, your commitment and-->
<!--care will encourage you to keep going even when-->
<!--faced with adversities.-->
<!--         <br></br><br></br><br></br><b>Element 3: Control</b><br></br><br></br>-->
<!--        And finally, the last element denotes that resilience-->
<!--means focusing your time and energy on situations-->
<!--you have control over. Instead of worrying about-->
<!--what you cannot change or don't have control over,-->
<!--you work towards things that are controllable.-->
<!--By doing so, you will feel more confident and-->
<!--empowered to take on any challenges.-->

<!--</string>-->
    <string name="res_day_1_whatwritten_suggest">Take a moment to think about what you\'ve written above. Reflect on how carving out your own defination of resilience makes you feel. Also, think about how you can strengthen your skill of resilience.</string>
    <string name="log_in">Log In</string>
    <string name="not_a_user_sign_up">Not a User? Sign Up</string>
    <string name="forgotpass">Forgot Password</string>
    <string name="auth">Authenticate with fingerprint</string>
    <!--    <string name="default_web_client_id">869015951740-pcjm7b4cn1uhkajsj46sqig5ovjdcnn9.apps.googleusercontent.com</string>-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nav_open">open_nav</string>
    <string name="nav_close">close_nav</string>
    <string name="add_reminder">Add Reminder Title</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_no">Repeat No.</string>
    <string name="repeat_type">Repeat Type</string>
    <string name="reminder_title">Yoga Reminder</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="repeat_off">Repeat Off</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
</resources>